--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "moshify",
   "version": "1.0.0",
   "description": "Application developed during HTML and CSS Part3",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
